# ARCHIE

./: .gitignore  README.md  archie.unitypackage
ARCHIE-Unity-DroneTracker/: .gitignore  ARCHIE-Unity-DroneTracker.sln  ARTestingFramework-DroneTrackerMod.sln  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
ARCHIE-Unity-DroneTracker/ProjectSettings/: ProjectSettings.asset
ARCHIE-Unity-DroneTracker/QCAR/: somedata16
ARCHIE-Unity-DroneTracker/Temp/: UnityTempFile-082589a0e7da246aa9f0084e7480205b  UnityTempFile-287d52261cf464a9f996970b138eccf3  UnityTempFile-2b484ade7e9464fc58c85320d74b18f1  UnityTempFile-31f8ca00e7ae445b59fc7643d732a41f  UnityTempFile-3fa7de6d1027c4246b6fd1a778d5b8e0  UnityTempFile-5ec94cc8fe35644f39ce72ad61a4af56  UnityTempFile-6f608a5d3ae884d7b959eb965748cb00  UnityTempFile-7278d7e889c204102812e7710af4eb59  UnityTempFile-811a63b2cfea147ce99c8e160dbe96c9  UnityTempFile-8d274601af1a943c1a8344fa2fa5c648  (+5 more)
ARCHIE-Unity-DroneTrackerMod/: ARTestingFramework-DroneTrackerUpdated.csproj  ARTestingFramework-DroneTrackerUpdated.sln  Assembly-CSharp.csproj  README.md
ARTestingFramework/: .gitignore  README.md  settings.gradle
ARTestingFramework-DroneTracker/: ARTestingFramework-DroneTracker.sln  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
ARTestingFramework-DroneTrackerUpdated/: ARTestingFramework-DroneTrackerUpdated.Editor.csproj  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
ARTestingFramework-Unity/: ARTestingFramework-Unity.Editor.csproj  ARTestingFramework-Unity.csproj  ARTestingFramework-Unity.sln  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj  README.md  Unity.PackageManagerUI.Editor.csproj  Unity.TextMeshPro.Editor.csproj  Unity.TextMeshPro.csproj  UnityEditor.StandardEvents.csproj
ARTestingFrameworkCaseStudies/: .gitignore  README.md  build.gradle  local.properties  settings.gradle
ARTestingFrameworkCaseStudies/opencv_face_detection/: CMakeLists.txt  build.gradle
ARTestingFrameworkCaseStudies/opencv_face_detection/src/main/: AndroidManifest.xml
ARTestingFrameworkCaseStudies/opencv_face_detection/src/main/java/edu/temple/opencv_face_detection/: DetectionBasedTracker.java  FdActivity.java
ARTestingFrameworkCaseStudies/opencv_face_detection/src/main/res/values/: strings.xml
android/: build.gradle  settings.gradle
back_end/: server_api.py
cloud_functions/: .firebaserc
opencv_face_detection/: .gitignore
opencv_face_detection/app/: CMakeLists.txt  build.gradle
opencv_face_detection/app/src/androidTest/java/edu/temple/opencv_face_detection/: ExampleInstrumentedTest.java
opencv_face_detection/app/src/main/: AndroidManifest.xml
opencv_face_detection/app/src/main/cpp/: DetectionBasedTracker.cpp
opencv_face_detection/app/src/main/java/edu/temple/opencv_face_detection/: MainActivity.java
opencv_face_detection/app/src/main/res/values/: strings.xml
opencv_face_detection/app/src/test/java/edu/temple/opencv_face_detection/: ExampleUnitTest.java
sample_files/: ARCHIETestController.cs  google-services.json
samples/: ARCHIETestController.cs  config_settings.json
unity_package/: SendToFbBehavior.cs  TempleUniversity.ARCHIE.asmdef.md  package.json  profiles.json
(+1267 files in other folders)
